# JamesMixer

./: .gitignore  Cargo.toml  README.md  TODO  conv_song.sh  run_jack.sh
src/: audio.rs  main.rs  ui.rs
src/audio/: jack_util.rs  song.rs  util.rs
