[package]
name = "james_mixer"
version = "0.1.0"
authors = ["user <no email given>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Audio
minimp3 = "0.5"
# libpulse-binding = { version = "2.0", default_features = false, features = ["pa_v8"] }
# libpulse-simple-binding = { version = "2.0", default_features = false, features = ["pa_v8"] }
jack = "0.6"

# Visual
imgui = "0.5.0"
imgui-winit-support = "0.5.0"
imgui-glium-renderer = "0.5.0"
glium = "0.27.0"

# Other
rayon = "1.5"
